--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,15 @@ body, textarea, select, input {
 	font-size: 13px;
 }
 
+button {
+	border: none;
+	cursor: pointer;
+}
+
+button:focus {
+	outline: none;
+}
+
 .clear-fix:after {
     clear: both;
     content: "";
@@ -113,10 +122,122 @@ body, textarea, select, input {
 	min-height: 116px; 
 }
 
+	/* welcome-modal */
+
+.welcome-modal__block {
+	background-color: rgba(0, 0, 0, .6);
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 9999;
+	display: none;
+}
+
+.welcome-modal {
+	background-color: #e8e8e8;
+	bottom: 0;
+	border-radius: 15px;
+	box-sizing: border-box;
+	height: 90%;
+	left: 0;
+	margin: auto;
+	max-width: 600px;
+	overflow: hidden;
+	padding: 80px 30px;
+	position: absolute;
+	right: 0;
+	text-align: justify;
+	top: -2500px;
+	width: 70%;
+}
+
+.welcome-modal__title {
+	text-align: center;
+}
+
+.welcome-modal__text {
+	font-size: 16px;
+	line-height: 22px;
+}
+
+.welcome-modal__link {
+	color: #ff5959;
+	text-decoration: none;
+}
+
+.welcome-modal__link:hover {
+	color: #000;
+}
+
+.welcome-modal__close-btn {
+	height: 20px;
+	width: 20px;
+	background: no-repeat center url("../images/close_icon.png");
+	position: absolute;
+	top: 30px;
+	right: 30px;
+}
+
+.welcome-modal__logo_block {
+	width: 100%;
+	height: 500px;
+	background-color: #ff5959;
+}
+
+
+
+/*.welcome-modal {*/
+	 /*-webkit-animation: slide-bottom 40s ease-out both 10s;*/
+	 /*animation: slide-bottom 40s ease-out both 10s;*/
+/*}*/
+
+/*@-webkit-keyframes slide-bottom {*/
+	/*0% {*/
+		/*-webkit-transform: translateY(-2000px);*/
+		/*transform: translateY(-2000px);*/
+	/*}*/
+	/*20% {*/
+		/*-webkit-transform: translateY(0);*/
+		/*transform: translateY(0);*/
+	/*}*/
+	/*80% {*/
+		/*-webkit-transform: translateY(0);*/
+		/*transform: translateY(0);*/
+	/*}*/
+	/*100% {*/
+		/*-webkit-transform: translateY(-2000px);*/
+		/*transform: translateY(-2000px);*/
+	/*}*/
+/*}*/
+/*@keyframes slide-bottom {*/
+	/*0% {*/
+		/*-webkit-transform: translateY(-2000px);*/
+		/*transform: translateY(-2000px);*/
+	/*}*/
+	/*20% {*/
+		/*-webkit-transform: translateY(0);*/
+		/*transform: translateY(0);*/
+	/*}*/
+	/*80% {*/
+		/*-webkit-transform: translateY(0);*/
+		/*transform: translateY(0);*/
+	/*}*/
+	/*100% {*/
+		/*-webkit-transform: translateY(-2000px);*/
+		/*transform: translateY(-2000px);*/
+	/*}*/
+/*}*/
+
+
+
+
 /****** header *****/
 
 .title-container {
 	min-height: 110px;
+	position: relative;
 	width: 100%;
 }
 
@@ -172,6 +293,26 @@ body, textarea, select, input {
 	background-color: #ff5959;
 	color: #e8e8e8;
 	position: relative;
+}
+
+#check-menu {
+	display: none;
+}
+
+.check-label {
+	cursor: pointer;
+	display: block;
+	height: 100%;
+	left: 0;
+	line-height: 40px;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+}
+
+.burger-box {
+	display: none;
 }
 
 
